# E-Wslni-Autonomous-Guide-Robot

./: .gitignore  README.md  arduino.ino
Navigation (NAV2)/slam/test/src/robot_simulation/: CMakeLists.txt  map.pgm  map.yaml  package.xml
Navigation (NAV2)/slam/test/src/robot_simulation/config/: mapper_params_online_async.yaml  sim.rviz
Navigation (NAV2)/slam/test/src/robot_simulation/launch/: gazebo.launch.py  gazebo_headless.launch.py  navigation.launch.py  slam.launch.py
Navigation (NAV2)/slam/test/src/robot_simulation/worlds/: empty.world  minimal.world  test_world.world
SolidWorks CAD/: Arduino Mega 2560.SLDPRT  Arduino Mega 2560.step  Assem support arduino.SLDASM  Assem1station.SLDASM  BreadBord.step.SLDPRT  CASTER WHEEL (2.5inch) ASSY.SLDPRT.SLDASM  CASTER WHEEL BASE LOCK.SLDPRT  CASTER WHEEL BASE.SLDPRT  Part1.SLDPRT  (+47 more)
UI + Chatbot/: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt  streamlit_app.py  vectordb_generation.py
UI + Chatbot/data/: Cycle Préparatoire au diplôme d’ingénieur en Management Industriel (EMINES).md  Cycle de formation ingénieur en Management Industriel (EMINES).md  EMINES Informations Admis 2025 Formation.md  Fr-Brochure offre-globale UM6P..md  locations.json
UI + Chatbot/hub/: main.py  railway.json
UI + Chatbot/src/: models.py  workflow.py
UI + Chatbot/src/components/: __init__.py  voice_assistant.py  voice_bridge.py
UI + Chatbot/src/services/: llm.py  location_catalog.py  memory.py  navigation.py  rag.py  robot_voice.py  stt.py  tts.py
UI + Chatbot/src/ui/: __init__.py  app_desktop.py  app_mobile.py  styles_desktop.py  styles_mobile.py
(+66 files in other folders)
